<resources>
    <string name="app_name">Personas</string>
    <string name="title_create_person">CREAR PERSONAS</string>
    <string name="dni">Cédula</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="btn_save">GUARDAR</string>
    <string name="btn_clean">LIMPIAR</string>
    <string name="title_list_people">LISTAR PERSONAS</string>
    <string name="number">No.</string>
    <string name="create">CREAR</string>
    <string name="list">LISTAR</string>
    <string-array name="options">
        <item>@string/create</item>
        <item>@string/list</item>
    </string-array>
    <string name="toast_person">Persona Guardada Exitosamente</string>
    <string name="empty_dni">Ingrese la cédula</string>
    <string name="empty_fname">Ingrese el nombre</string>
    <string name="empty_lname">Ingrese el apellido</string>
</resources>